# ToySoldiersim

./: CMakeLists.txt  calculationengine.cpp  calculationengine.h  isoldier.h  main.cpp  marksman.cpp  marksman.h  medic.cpp  medic.h  soldier.cpp  soldier.h  squad.cpp  squad.h
toy_soldier_wersja2/: CMakeLists.txt  isoldier.h  main.cpp  marksman.cpp  marksman.h  medic.cpp  medic.h  simulationengine.cpp  simulationengine.h  soldier.cpp  soldier.h  squad.cpp  squad.h
